added tags to swagger annotations
